package ru.miet.example.grpc.chat.entity.column;

public class ChatUserColumn {
    public static final String ID = "id";
    public static final String USERNAME = "username";
    public static final String PASSWORD = "password";
    public static final String FIRST_NAME = "first_name";
    public static final String LAST_NAME = "last_name";
    public static final String ADDITIONAL_DESC = "additional_description";
}
